<resources>
    <string name="app_name">NoticeFix</string>
    <string name="action_settings">设置</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">NoticeFix</string>
    <string name="second_fragment_label">自定义图标</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="v_app_icon">应用图标</string>
    <string name="v_app_name">app name</string>
    <string name="v_app_pkg">com.xeasy.noticefix</string>
    <string name="v_app_version">版本1.0</string>
    <string name="v_app_type">三方</string>
    <string name="app_type_system">[系统应用]: %1$s</string>
    <string name="app_type_user">[三方应用]: %1$s</string>
    <string name="application_introduction">一些app并未适配安卓5.0新的通知图标规范, 因此会造成通知图标变成方块/白块/圆块等问题, 此应用旨在解决未适配的应用造成难以辨别是哪个应用的通知的问题</string>
    <string name="title_activity_main">主页</string>
    <string name="xposed_status">xposed模块是否激活: %1$s</string>
    <string name="icon_setting">图标转换方式以及优先级配置</string>
    <string name="restart_systemui">重启系统界面(SystemUI)</string>
    <string name="app_filter_system">系统应用</string>
    <string name="app_filter_user">三方应用</string>
    <string name="app_filter_custom_icon">已自定义图标</string>
    <string name="custom_icon_config">自定义图标</string>
    <string name="icon_lib_config">图标库配置</string>
    <string name="system_app">"系统: "</string>
    <string name="user_app">"三方: "</string>
    <string name="app_lib_matched">"库匹配: "</string>
    <string name="custom_icon">"自定义: "</string>
    <string name="app_filter_icon_matched">已匹配图标库</string>
    <string name="app_info_icon_config">图标库: %1$s 自定义: %2$s 白名单: %3$s</string>
    <string name="app_info_auto_icon">自动转换</string>
    <string name="app_info_icon_lib">图标库</string>
    <string name="app_info_icon_custom">自定义图标</string>
    <string name="delete_custom_icon_title">是否要删除自定义图标?</string>
    <string name="delete_custom_icon_message">是否要删除自定义图标</string>
    <string name="icon_func_color">解除原生安卓彩色图标限制</string>
    <string name="icon_func_lib">使用内置图标库替换通知图标</string>
    <string name="icon_func_auto">使用内置算法替换通知图标</string>
    <string name="icon_func_custom">使用自定义替换通知图标</string>
    <string name="yes">是</string>
    <string name="no">否</string>
    <string name="title_activity_settings">设置</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="debug_mode">调试模式</string>
    <string name="debug_mode_desc">(测试功能勿开)</string>
    <string name="refresh_icon_library">更新内置图标库</string>
    <string name="app_about">NoticeFix by x-easy</string>
    <string name="library_url">https://x-easy.cn/noticefix/icon_lib</string>
    <string name="handle_grayscale_icons_config">不处理灰度图标</string>
    <string name="handle_grayscale_icons_config_desc">如果通知图标是灰度的, 不进行转换</string>
    <string name="icon_preview">效果预览</string>
    <string name="icon_func_color_info">解除原生安卓彩色图标限制(主动显示除外)</string>
    <string name="save_img">保存此图片?</string>
    <string name="save_img_title">保存</string>
    <string name="custom_icon_helper">自定义图标帮手</string>
    <string name="custom_icon_helper_info">如果选取的自定义图标不符合灰度规范, 进行自动转换</string>
    <string name="app_main_tips">提示: 修改后需要重启系统或重启SystemUI生效</string>
    <string name="import_icon_pack">导入图标包</string>
    <string name="import_icon_pack_info">从本地文件(JSON)导入图标包</string>
    <string name="view_icon_lib">查看图标库</string>
    <string name="app_lib_count">"图标库数量: "</string>
    <string name="grayscale">灰度</string>
    <string name="reverse_color">反色</string>
    <string name="rounded_corners">圆角</string>
    <string name="submit">提交</string>
    <string name="cancel">取消</string>
    <string name="function_not_open">功能未开放</string>
    <string name="icon_lib_refresh_tips">"刷新成功, 此次新增图标(个): "</string>
    <string name="no_root">没有root权限!!</string>
    <string name="help">视频演示教程@x-easy BiliBili</string>
    <string name="save_fail">图片保存失败</string>
    <string name="save_success">图片保存成功</string>
    <string name="notice_blacklist">通知黑名单</string>
    <string name="notice_whitelist">通知白名单</string>
    <string name="not_handle">不处理此应用</string>
    <string name="always_handle_proxy_notice">始终处理推送消息</string>
    <string name="always_handle_proxy_notice_info">强制处理推送消息(如: HMS), 不管有没有打开\'不处理\'开关</string>
    <string name="whitelist">"白名单: "</string>
    <string name="app_filter_white_list">白名单</string>
    <string name="expand_headsup">展开横幅通知</string>
    <string name="expand_status_bar">展开通知栏通知</string>
    <string name="expand_notice">展开通知</string>
    <string name="expand_notice_content">展开所有应用的通知内容(如果可以)</string>
</resources>