<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:theme="@style/Theme.NoticeFix.AppBarOverlay"
    tools:context="com.xeasy.noticefix.activity.AppListActivity">
    <item
        android:id="@+id/app_filter_search"
        android:orderInCategory="100"
        android:icon="@android:drawable/ic_menu_search"
        app:actionViewClass="android.widget.SearchView"
        app:showAsAction="ifRoom"
        />
    <item
        android:id="@+id/app_filter_system"
        android:orderInCategory="100"
        android:checkable="true"
        android:checked="true"
        android:title="@string/app_filter_system"
        app:showAsAction="never"
        />
    <!--Should use android:showAsAction when not using the appcompat library-->
    <item
        android:id="@+id/app_filter_user"
        android:orderInCategory="100"
        android:checkable="true"
        android:checked="true"
        android:title="@string/app_filter_user"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/app_filter_icon_matched"
        android:orderInCategory="100"
        android:checkable="true"
        android:checked="true"
        android:title="@string/app_filter_icon_matched"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/app_filter_custom_icon"
        android:orderInCategory="100"
        android:checkable="true"
        android:checked="true"
        android:title="@string/app_filter_custom_icon"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/app_filter_white_list"
        android:orderInCategory="100"
        android:checkable="true"
        android:checked="true"
        android:title="@string/app_filter_white_list"
        app:showAsAction="never"
        />
</menu>