<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.AppListActivity">
    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="3dp"
        android:paddingEnd="8dp"
        >
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            />

    </com.google.android.material.appbar.AppBarLayout>
    <LinearLayout
        android:padding="5dp"
        android:theme="@android:style/ThemeOverlay.Material.Dark"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/system_app"
            android:textColor="@android:color/holo_red_dark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:text='--'
            android:textColor="@android:color/holo_red_dark"
            android:id="@+id/system_app_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:paddingStart="10dp"
            android:paddingEnd="0dp"
            android:textColor="@android:color/holo_green_dark"
            android:text="@string/user_app"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:text='--'
            android:textColor="@android:color/holo_green_dark"
            android:id="@+id/user_app_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:paddingStart="10dp"
            android:paddingEnd="0dp"
            android:textColor="@android:color/holo_blue_dark"
            android:text="@string/app_lib_matched"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:text='--'
            android:textColor="@android:color/holo_blue_dark"
            android:id="@+id/lib_icon_app_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:paddingStart="10dp"
            android:paddingEnd="0dp"
            android:textColor="@android:color/holo_orange_dark"
            android:text="@string/custom_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:text='--'
            android:textColor="@android:color/holo_orange_dark"
            android:id="@+id/custom_icon_app_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:paddingStart="10dp"
            android:paddingEnd="0dp"
            android:textColor="@android:color/holo_green_dark"
            android:text="@string/whitelist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:text='--'
            android:textColor="@android:color/holo_green_dark"
            android:id="@+id/whitelist_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/appListView"
        android:scrollbars="vertical"
        android:fadeScrollbars="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <!--<ScrollView
        android:id="@+id/app_list"
        android:layout_width="match_parent"
        android:layout_height="677dp"
        android:orientation="vertical">





    </ScrollView>-->

</LinearLayout>